# atcommand_openmoko

./: README.md
atmycommand/: AUTHORS  Makefile  Makefile.am  NEWS  README  TODO  configure.in
atmycommand/data/: Makefile.am  atmycommand.desktop
atmycommand/src/: Makefile.am  main.c
atmycommand/src/at/: atcmd.c  atcmd.h  gsm_07_07.h  linked-list.c  pin.c  pin.h
atmycommand/src/log/: log.c
atmycommand/src/ui/: callbacks.c  callbacks.h  interface.c  interface.h  support.c  support.h
